syntax = "proto3";

package proto;

option go_package = "./pb";

import "google/protobuf/Empty.proto";
import "google/protobuf/Timestamp.proto";

service UserService {
  rpc FindAll (google.protobuf.Empty) returns (ListUserResponse) {}
  rpc FindByID (GetUserByIDRequest) returns (GetUserResponse) {}
  rpc Create (CreateUserRequest) returns (GetUserResponse) {}
  rpc Update (UpdateUserRequest) returns (GetUserResponse) {}
  rpc Delete (GetUserByIDRequest) returns (google.protobuf.Empty) {}
}

message User {
  string ID = 1; // @gotags: bson:"_id,omitempty",json:"_id"
  string Name = 2; // @gotags: bson:"name",json:"name"
  string Email = 3; // @gotags: bson:"email",json:"email"
  string Password = 4; // @gotags: bson:"password",json:"password"
  google.protobuf.Timestamp CreatedAt = 5; // @gotags: bson:"created_at,omitempty",json:"created_at"
  google.protobuf.Timestamp UpdatedAt = 6; // @gotags: bson:"created_at,omitempty",json:"updated_at"
}

message ListUserResponse {
  repeated User Users = 1; // @gotags: json:"users"
}

message GetUserResponse {
  User User = 1; // @gotags: json:"user"
}

message GetUserByIDRequest {
  string ID = 1; // @gotags: json:"_id"
}

message CreateUserRequest {
  string Name = 1; // @gotags: json:"name",binding:"required,min=3,max=255"
  string Email = 2; // @gotags: json:"email",binding:"required,email,max=255"
  string Password = 3; // @gotags: json:"password",binding:"required,min=8,max=255"
}

message UpdateUserRequest {
  string ID = 1; // @gotags: json:"_id"
  string Name = 2; // @gotags: json:"name",binding:"required,min=3,max=255"
  string Password = 3; // @gotags: json:"password",binding:"omitempty,min=8,max=255"
}
